# rust-es-optimizer

./: Cargo.toml  README.md
benches/: bench.rs
examples/: noisy-poly.rs  polynomials.rs  simple.rs
src/: lib.rs  optimizers.rs
