[package]
name = "esopt"
version = "0.1.6"
authors = ["FlixCoder"]

[dependencies]
rand = "0.6.*"
rayon = "0.9.*"


[profile.dev]
opt-level = 3
lto = false
panic = "unwind"
debug = true
debug-assertions = true

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
panic = "unwind"
debug = false
debug-assertions = false

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false
