[package]
name = "esopt"
version = "0.1.10"
authors = ["FlixCoder"]

[dependencies]
rand = "0.6.*"
rayon = "1.*"
serde = "1.*"
serde_derive = "1.*"
serde_json = "1.*"

[features]
floats-f64 = []


[profile.dev]
opt-level = 3
lto = false
panic = "unwind"
debug = true
debug-assertions = true

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
panic = "unwind"
debug = false
debug-assertions = false

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false
